レイアウトを調整した。

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
 
 .img-wrapper {
     max-width: 400px;
+    min-width: 320px;
     width: 96%;
 }
 
@@ -20,5 +21,5 @@ h1 {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     justify-items: center;
     align-items: center;
-    gap: 80px;
+    gap: 40px;
 }
