--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    padding: 0 4%;
     background-color: #e5e5e5;
 }
 
@@ -9,7 +10,6 @@ h1 {
 .img-wrapper {
     max-width: 400px;
     min-width: 320px;
-    width: 96%;
 }
 
 .img-wrapper > img {
@@ -21,5 +21,5 @@ h1 {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     justify-items: center;
     align-items: center;
-    gap: 40px;
+    gap: 80px;
 }
