--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,7 @@ h1 {
 .name-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    justify-items: center;
-    align-items: center;
+    place-items: center;
     gap: 80px;
     margin-top: 40px;
 }
