レイアウトを調整した。

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,6 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     place-items: center;
-    gap: 80px;
-    margin-top: 40px;
+    gap: 64px;
+    padding: 40px 0;
 }
